# Huffman-Coding

./: .gitignore  CMakeLists.txt  Makefile  README.md  char_node.cc  char_node.h  encode_utils.cc  encode_utils.h  encoding.h  encoding.proto  freq_node.cc  freq_node.h  huffman.cc  inner_node.cc  inner_node.h
src/: CMakeLists.txt  char_node.cc  char_node.h  char_node_test.cc  encode_decode.cc  encode_decode.h  encode_decode_test.cc  encoder_decoder.h  encoding.proto  freq_node.h  huffman.cc  inner_node.cc  inner_node.h  inner_node_test.cc  status.h  tests.cc
